Prevent tag text from jumping around because of font-weight on hover

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -528,7 +528,8 @@ label.filter {
 }
 
 a.tag-filter:hover {
-  font-weight: bold;
+  color: $darker;
+  text-decoration: underline;
 }
 
 .normal-tag { color: $colder;}
